--- a/action.yml
+++ b/action.yml
@@ -34,4 +34,5 @@ runs:
 
   steps:
     - name: Executing synchronization
+      shell: bash
       run: sync-cherry-pick.sh ${{github.repository}}/${{github.ref_name}} --upstream ${{inputs.upstream-org}}/${{inputs.upstream-repo}}/${{inputs.upstream-branch}} 
